--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="utils/sqlitejdbc-v056.jar"/>
+	<classpathentry kind="lib" path="/home/malte/entwicklung/eclipse/workspace/EmailVerwaltungApp/utils/jersey-bundle-1.8.jar"/>
+	<classpathentry kind="lib" path="/media/md127/entwicklung/eclipse/workspace/EmailVerwaltungApp/utils/jsr311-api-1.1.jar"/>
+	<classpathentry kind="lib" path="/media/md127/entwicklung/eclipse/workspace/EmailVerwaltungApp/utils/asm-3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
